

You should keep two lines between each date.
TAG is optional. If your changes fix a bug listed in the Geant4 Bugzilla,
add this in the documentation for the changed file as [BUGFIX #BUGNUMBER].


     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *

     ----------------------------------------------------------

11th November 2014 - Gunter Folger (cmake-V10-00-34)
- Modules/Geant4DatasetDefinitions.cmake: update md5sum 
   for G4EMLOW6.21 after correction of files access permissions. 

10th November 2014 - Gunter Folger (cmake-V10-00-33)
- Modules/Geant4DatasetDefinitions.cmake: RadioactiveDecay4.2
   and update md5sum for G4EMLOW6.21 after correction of files 
	access permissions. 

07th November 2014 - Ben Morgan (cmake-V10-00-32)
- Modules/Geant4OptionalComponents.cmake : BUGFIX: Failures of static 
  builds traced to typo in USolids settings in static mode where
  EXPAT_LIBRARIES was overwritten. Correct typo.

30th October 2014 - Ben Morgan (cmake-V10-00-31)(INTERNAL)
- Modules/Geant4OptionalComponents.cmake : Update USolids configuration
  to decouple GEANT4_USE_USOLIDS and GEANT4_USE_SYSTEM_USOLIDS
  options.
  - GEANT4_USE_USOLIDS ON means that Geant4 solids are replaced with
    USolids equivalents, OFF means Geant4 solids and USolids are available
  - A USolids lib must ALWAYS be availble, so GEANT4_USE_SYSTEM_USOLIDS
    simply switches between these.
- Templates/Geant4Config.cmake.in : decouple GEANT4_USE_USOLIDS and 
  GEANT4_USE_SYSTEM_USOLIDS
- Templates/geant4-config.in : decouple GEANT4_USE_USOLIDS and 
  GEANT4_USE_SYSTEM_USOLIDS

30th October 2014 - Ben Morgan (cmake-V10-00-30)(INTERNAL)
- Support builtin/system USolids library
- Modules/Geant4OptionalComponents.cmake : Update USolids configuration
  use internal G4geomUSolids by default if USolids support requested.
  Add dependent option to allow system USolids to be searched for.